# databoard

./: .gitignore  README.md  app.py  dataverse_cache.sqlite  flat.py  http_cache.sqlite  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  wsgi.py
.dev/: http_cache.sqlite  sandbox.py  search_api.py  test_installations.py
.dev/app/data/: last_fetch.json
.dev/app/services/: README.md  orchestrator.py
app/: config.py  search_api.py
app/assets/: styles.css
app/data/installations/: installations.csv  installations.geojson  installations.parquet
app/logs/: failed_installations.csv
app/modules/: api_helpers.py
app/pages/: graphs.py  home.py  map.py  tables.py
app/services/: README.md  config.py  installations.py  metadata.py  orchestrator.py
backend/: README.md  api.py  pyproject.toml  requirements.txt  wsgi.py
backend/data/installations/: installations.csv  installations.geojson
backend/data/metadata/: metadata.csv  metadata.parquet
backend/dev/: get_installations.py  sandbox.py
backend/examples/: minimal.py
backend/logs/: failed_installations.csv
backend/pages/: graphs.py  home.py  map.py
backend/ref/: app.py  wsgi.py
backend/routes/: __init__.py  data.py
backend/services/: config.yml  installations.py  metadata.py  orchestrator.py
dev/: sandbox.py  script.py  search_api.sh
examples/: example.py
frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: theme.svelte.ts
pages/: graphs.py  home.py  map.py  tables.py
(+16 files in other folders)
